# 2025-kiosk

./: CMakeLists.txt  DbManager.h  HeaderBar.qml  README.md  ServerPage.qml  TableCard.qml  TableDetailPage.qml  TableManager.cpp  TableManager.h  TablePage.qml  echo_server.cpp  echo_server.h  main.cpp  main.qml
